Initializing create contact handler
