# docs/swagger.json
@@ -12,6 +12,30 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/contacts": {
+            "post": {
+                "description": "To create a contact",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contacts"
+                ],
+                "summary": "Create a contact",
+                "operationId": "createContact",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/contacts.createResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/health/ping": {
             "get": {
                 "description": "To pings the server",
@@ -38,6 +62,9 @@
         }
     },
     "definitions": {
+        "contacts.createResponse": {
+            "type": "object"
+        },
         "healthPing.pingResponse": {
             "type": "object",
             "properties": {
